elements all aligned properly. TODO: add correct fonts

--- a/stylesheets/styling.css
+++ b/stylesheets/styling.css
@@ -21,6 +21,7 @@ body{
 
 .sign_up_images{
   border-radius: 10%;
+  box-shadow: 0px 5px #bbbbbb;
 }
 
 .main_left{
@@ -42,18 +43,17 @@ body{
 .number_area{
   color: #31b763;
   width: 100%;
+  font-size: 1.75em;
 }
 
 .big_number_text{
-  font-size: 0.75em;
-  margin-left: 20%;
+  display: inline-block;
+  font-size: 0.35em;
+  margin-left: 5%;
 }
 
 .value_statements_text{
   color: #4c5b6a;
-}
-
-.value_statements_text{
   margin-left: 10%;
 }
 
